edit project reference

--- a/Lab#4/HTTPClientApp/HTTPClientApp/HTTPClientApp.csproj
+++ b/Lab#4/HTTPClientApp/HTTPClientApp/HTTPClientApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\PR lab 3\Network_Programming\Lab#3\DNSClientApp\Helpers\Helpers.csproj" />
+    <ProjectReference Include="..\Helpers\Helpers.csproj" />
   </ItemGroup>
 
 </Project>
