--- a/Lab#6/NtpClientApp/NtpClientApp/NtpClientApp.csproj
+++ b/Lab#6/NtpClientApp/NtpClientApp/NtpClientApp.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NtpClient" Version="1.0.14" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
